--- a/css/twitter.css
+++ b/css/twitter.css
@@ -80,7 +80,8 @@ a {
 
 .profile-image {
     position:absolute;
-    top: 225px;
+    top: 250px;
+
 }
 
 .timeline {
@@ -88,6 +89,8 @@ a {
     right:200px;
     top:600px;
     width:50%;
+    margin-left:.5em;
+    margin-right:.5em;
 }
 
 .who-to-follow {
@@ -95,10 +98,42 @@ a {
     right:100px;
     top:600px;
     width:25%;
+    margin-left:.5em;
+    margin-right:.5em;
 }
 
 .profile-details {
     width:25%;
     position:absolute;
     top:400px;
+    margin-left: .5em;
+    margin-right:.5em;
+}
+
+.profile-form{
+    position:relative;
+
+}
+
+.media {
+   width:100%;
+   background-color: var(--light-bg);
+    border-bottom: 1px;
+    border-bottom-color: var(--separator-color);
+    padding: .5em;
+
+}
+
+.media-image {
+    width: 50px;
+    margin-top: 1.33em;
+}
+
+.profile-details {
+margin: .5em;
+
+}
+
+.profile-entry {
+    margin: .5em;
 }
