--- a/css/messages.css
+++ b/css/messages.css
@@ -5,3 +5,35 @@ body, html {
     margin: 0;
     font-family: Arial, Ubuntu, sans-serif;
 }
+
+div {
+    border: .1em solid lightgray;
+    margin: 1em auto;
+    padding: 10px;
+    width: 90%;
+
+}
+
+.message-info {
+    color: #4a44a1;
+    background-color: #cddeff;
+    border-radius: 10px;
+}
+
+.message-success {
+    color: #1b733f;
+    background-color: #cff3da;
+    border-radius: 10px;
+}
+
+.message-warning {
+    color: #9b8a2a;
+    background-color: #fcfbc9;
+    border-radius: 10px;
+}
+
+.message-error {
+    color: #770623;
+    background-color: #fad2d7;
+    border-radius: 10px;
+}
